# sql-cached-crud

./: Cargo.toml  README.md  config.env  runpostgres.sh
src/: conf.rs  lib.rs
src/adaptors/: mod.rs  mutators.rs  selectors.rs
src/cache/: mod.rs
src/conn/: postgres.rs
