[package]
name = "sqlx-cached-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono", "sqlite"] }
sqlx-crud = "0.4.0"
standard-error = "0.1.1"
tokio = { version = "1.39.2", features = ["full"] }
